modifications of testEUNIQUAC project for debugging (main and outputfile) (FH)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@304 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/.cproject
+++ b/GEMIPM2K/.cproject
@@ -3,8 +3,8 @@
 
 <cproject>
 <storageModule moduleId="org.eclipse.cdt.core.settings">
-<cconfiguration id="cdt.managedbuild.toolchain.gnu.mingw.base.231358949">
-<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.mingw.base.231358949" moduleId="org.eclipse.cdt.core.settings" name="MinGW GCC">
+<cconfiguration id="cdt.managedbuild.toolchain.gnu.mingw.base.770855257">
+<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.mingw.base.770855257" moduleId="org.eclipse.cdt.core.settings" name="MinGW GCC">
 <externalSettings/>
 <extensions>
 <extension id="org.eclipse.cdt.core.PE" point="org.eclipse.cdt.core.BinaryParser"/>
@@ -15,24 +15,24 @@
 </extensions>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
-<configuration artifactExtension="" artifactName="GEMIPM2K" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.mingw.base.231358949" name="MinGW GCC" parent="org.eclipse.cdt.build.core.emptycfg">
-<folderInfo id="cdt.managedbuild.toolchain.gnu.mingw.base.231358949.1038067784" name="/" resourcePath="">
-<toolChain id="cdt.managedbuild.toolchain.gnu.mingw.base.1492019590" name="cdt.managedbuild.toolchain.gnu.mingw.base" superClass="cdt.managedbuild.toolchain.gnu.mingw.base">
-<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.PE" id="cdt.managedbuild.target.gnu.platform.mingw.base.1414847681" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
-<builder arguments="-f Makefile.MingW" buildPath="${workspace_loc:/GEMIPM2K}" command="make" id="cdt.managedbuild.toolchain.gnu.mingw.base.231358949.478796547" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder"/>
-<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.base.1987238961" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.base">
-<inputType id="cdt.managedbuild.tool.gnu.assembler.input.143229728" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+<configuration artifactName="GEMIPM2K" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.mingw.base.770855257" name="MinGW GCC" parent="org.eclipse.cdt.build.core.emptycfg">
+<folderInfo id="cdt.managedbuild.toolchain.gnu.mingw.base.770855257.2143659990" name="/" resourcePath="">
+<toolChain id="cdt.managedbuild.toolchain.gnu.mingw.base.1634557907" name="cdt.managedbuild.toolchain.gnu.mingw.base" superClass="cdt.managedbuild.toolchain.gnu.mingw.base">
+<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.PE" id="cdt.managedbuild.target.gnu.platform.mingw.base.700181794" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
+<builder arguments="-f Makefile.MinGW" command="make" id="cdt.managedbuild.toolchain.gnu.mingw.base.770855257.2090152145" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder"/>
+<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.base.1033060478" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.base">
+<inputType id="cdt.managedbuild.tool.gnu.assembler.input.731546890" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 </tool>
-<tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1973281605" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base"/>
-<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.978180529" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base">
-<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.160130104" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+<tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1429520088" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base"/>
+<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.413326520" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base">
+<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.144657394" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
-<tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.base.2302816" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.base">
-<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.756324235" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
+<tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.base.1952994604" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.base">
+<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1935305308" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 </tool>
-<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.base.727422909" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.base"/>
-<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base.1395994658" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base">
-<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.303946242" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
+<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.base.934266576" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.base"/>
+<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base.656665140" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base">
+<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.31973340" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 <additionalInput kind="additionalinput" paths="$(LIBS)"/>
 </inputType>
@@ -41,7 +41,9 @@
 </folderInfo>
 </configuration>
 </storageModule>
+
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 <storageModule moduleId="scannerConfiguration">
 <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile"/>
 <profile id="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile">
@@ -124,7 +126,7 @@
 <parser enabled="true"/>
 </scannerInfoProvider>
 </profile>
-<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.mingw.base.231358949;cdt.managedbuild.toolchain.gnu.mingw.base.231358949.1038067784;cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.978180529;cdt.managedbuild.tool.gnu.cpp.compiler.input.160130104">
+<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.mingw.base.770855257;cdt.managedbuild.toolchain.gnu.mingw.base.770855257.2143659990;cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.413326520;cdt.managedbuild.tool.gnu.cpp.compiler.input.144657394">
 <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
 <profile id="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile">
 <buildOutputProvider>
@@ -207,7 +209,7 @@
 </scannerInfoProvider>
 </profile>
 </scannerConfigBuildInfo>
-<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.mingw.base.231358949;cdt.managedbuild.toolchain.gnu.mingw.base.231358949.1038067784;cdt.managedbuild.tool.gnu.c.compiler.mingw.base.2302816;cdt.managedbuild.tool.gnu.c.compiler.input.756324235">
+<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.mingw.base.770855257;cdt.managedbuild.toolchain.gnu.mingw.base.770855257.2143659990;cdt.managedbuild.tool.gnu.c.compiler.mingw.base.1952994604;cdt.managedbuild.tool.gnu.c.compiler.input.1935305308">
 <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
 <profile id="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile">
 <buildOutputProvider>
@@ -294,6 +296,6 @@
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
-<project id="GEMIPM2K.null.956787229" name="GEMIPM2K"/>
+<project id="GEMIPM2K.null.543075803" name="GEMIPM2K"/>
 </storageModule>
 </cproject>
