Added g_tsolmod.html documentation file (with pictures and small changes in other files) DK
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@357 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@ GEMIPM2K/Makefile.lib -text
 GEMIPM2K/array.h -text
 GEMIPM2K/databr.h -text
 GEMIPM2K/datach.h -text
+GEMIPM2K/doc/html/IPM-Flowchart.png -text
+GEMIPM2K/doc/html/SIT-Phase-page3.png -text
 GEMIPM2K/doc/html/gemipm2k-inp.html -text
 GEMIPM2K/doc/html/gemipm2k-man.html -text
 GEMIPM2K/doc/html/gems1.png -text
