Changing Makefiles and documentation SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@361 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/platform/Linux-GNU/Makefile
+++ b/GEMIPM2K/platform/Linux-GNU/Makefile
@@ -5,8 +5,8 @@
 
 ####### Compiler, tools and options
 
-CC       = gcc-4.3
-CXX      = g++-4.3
+CC       = g++
+CXX      = g++
 LEX      = flex
 YACC     = yacc
 CFLAGS   = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
@@ -14,7 +14,7 @@ CXXFLAGS = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  = -I.
-LINK     = gcc-4.3
+LINK     = gcc
 LFLAGS   = -lstdc++
 LIBS     = $(SUBLIBS)  
 AR       = ar cqs
