--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,8 @@ GEMIPM2K/array.h -text
 GEMIPM2K/databr.h -text
 GEMIPM2K/datach.h -text
 GEMIPM2K/doc/html/IPM-Flowchart.png -text
+GEMIPM2K/doc/html/Pitzer_Phase_page3.png -text
+GEMIPM2K/doc/html/Pitzer_phase_code.png -text
 GEMIPM2K/doc/html/SIT-Phase-page3.png -text
 GEMIPM2K/doc/html/gemipm2k-inp.html -text
 GEMIPM2K/doc/html/gemipm2k-man.html -text
