Upgrade to gems3.0.0 IPM kernel variant with optional qd_real summations and improved cutoffs and inserts. Also includes a bugfix in Dikin criterion calculation which needs setting Pa_DK between 1e-7 and 1e-5. Pa_DHB can be set as low as 1e-12 - 1e-14 depending on the system. Optional qd_real is compiled in when the -DUse_qd_real compiler key is present and libqd is installed in the path. To disable (if you have no libqd installed), just remove -DUse_qd_real from the makefile (DK). This is the first upgrade after the tag consistent with v 2.3.1 of GEMS-PSI.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@368 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/Makefile
+++ b/GEMIPM2K/Makefile
@@ -5,18 +5,18 @@
 
 ####### Compiler, tools and options
 
-CC       = gcc-4.3
-CXX      = g++-4.3
+CC       = gcc
+CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
-CXXFLAGS = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
+CFLAGS   = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix -DUse_qd_real
+CXXFLAGS = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix -DUse_qd_real
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  = -I.
-LINK     = gcc-4.3
+LINK     = gcc
 LFLAGS   = -lstdc++
-LIBS     = $(SUBLIBS)  
+LIBS     = $(SUBLIBS) -lqd 
 AR       = ar cqs
 RANLIB   = 
 TAR      = tar -cf
