--- a/GEMIPM2K/Makefile.MinGW
+++ b/GEMIPM2K/Makefile.MinGW
@@ -18,8 +18,8 @@ CC       = g++
 CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -g -DIPMGEMPLUGIN 
-CXXFLAGS = -g -DIPMGEMPLUGIN 
+CFLAGS   = -g -DIPMGEMPLUGIN -DUse_qd_real 
+CXXFLAGS = -g -DIPMGEMPLUGIN -DUse_qd_real
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  =  -I.
@@ -28,7 +28,7 @@ LFLAGS   =
 LFLAGS   = -static
 # static flag for pgi linker
 # LFLAGS   = -Bstatic
-LIBS     = $(SUBLIBS)  
+LIBS     = $(SUBLIBS) -lqd  
 AR       = ar cqs
 RANLIB   = 
 TAR      = tar -cf
