Interim fixes (takeover from GEMS3 build 1486, see also BugIssue0013): Extensive cleanup of memory objects in Multi and in functions related to adsorption (DK,SD). Important addition of GammaCalc(LINK_US_MODE) before entering FIA() in AIA mode and after FIA(); this improved both the mass balance refinement and the convergence. After extensive testing, several interim sets of numerical settings were identified (see in FlagsAndCodes Help page). (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@377 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/Makefile.MinGW
+++ b/GEMIPM2K/Makefile.MinGW
@@ -18,8 +18,10 @@ CC       = g++
 CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -g -DIPMGEMPLUGIN -DUse_qd_real 
-CXXFLAGS = -g -DIPMGEMPLUGIN -DUse_qd_real
+CFLAGS   = -g -DIPMGEMPLUGIN
+#  -DUse_qd_real 
+CXXFLAGS = -g -DIPMGEMPLUGIN
+#  -DUse_qd_real
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  =  -I.
