Updated Makefile.lib and Makefile.MinGW to deactivate the obsolete -lqd and -DUse_qd_real options (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@475 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/Makefile.MinGW
+++ b/GEMIPM2K/Makefile.MinGW
@@ -30,7 +30,8 @@ LFLAGS   =
 LFLAGS   = -static
 # static flag for pgi linker
 # LFLAGS   = -Bstatic
-LIBS     = $(SUBLIBS) -lqd  
+LIBS     = $(SUBLIBS)
+# -lqd  
 AR       = ar cqs
 RANLIB   = 
 TAR      = tar -cf
@@ -78,7 +79,7 @@ SOURCES = gstring.cpp \
 		gdatastream.cpp \
 		s_fgl.cpp \
 		s_fgl1.cpp \
-	    s_fgl2.cpp \
+	        s_fgl2.cpp \
 		s_fgl3.cpp \
 		s_fgl4.cpp \
 		node.cpp \
