Added GEMS3K subdirectory for further development of GEM IPM kernel. The old GEMIPM2K subdirectory will be retained and should not be developed after rev. 565 (SD)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@567 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,82 @@ GEMIPM2K/tnt_array2d.h -text
 GEMIPM2K/tnt_i_refvec.h -text
 GEMIPM2K/v_user.h -text
 GEMIPM2K/verror.h -text
+GEMS3K/GEMS3K.pro -text
+GEMS3K/Makefile.MinGW -text
+GEMS3K/Makefile.lib -text
+GEMS3K/databr.h -text
+GEMS3K/datach.h -text
+GEMS3K/doc/html/IPM-Flowchart.png -text
+GEMS3K/doc/html/Pitzer_Phase_page3.png -text
+GEMS3K/doc/html/Pitzer_phase_code.png -text
+GEMS3K/doc/html/SIT-Phase-page3.png -text
+GEMS3K/doc/html/TNodeArray_User_Reference.html -text
+GEMS3K/doc/html/g_tsolmod.html -text
+GEMS3K/doc/html/gemipm2k-inp.html -text
+GEMS3K/doc/html/gemipm2k-man.html -text
+GEMS3K/doc/html/gemipm2k-ref.html -text
+GEMS3K/doc/html/gems1.png -text
+GEMS3K/doc/html/gems_ipm.html -text
+GEMS3K/doc/txt/NewGEMS_RepoStructure.txt -text
+GEMS3K/doc/txt/PGIcompile.txt -text
+GEMS3K/doc/txt/ParamMulti-dat.txt -text
+GEMS3K/doc/txt/SVN-URL-ROCKFLOW-GEM.txt -text
+GEMS3K/doc/txt/ToDo-list.txt -text
+GEMS3K/doc/txt/dbr-dat-doc.txt -text
+GEMS3K/doc/txt/dch-dat-doc.txt -text
+GEMS3K/doc/txt/f_gem_node.h -text
+GEMS3K/doc/txt/f_gem_node.inc -text
+GEMS3K/doc/txt/filelist-doc.txt -text
+GEMS3K/doc/txt/ipm-dat-doc.txt -text
+GEMS3K/gdatastream.cpp -text
+GEMS3K/gdatastream.h -text
+GEMS3K/gems3k.pri -text
+GEMS3K/io_arrays.cpp -text
+GEMS3K/io_arrays.h -text
+GEMS3K/ipm_chemical.cpp -text
+GEMS3K/ipm_chemical2.cpp -text
+GEMS3K/ipm_chemical3.cpp -text
+GEMS3K/ipm_main.cpp -text
+GEMS3K/ipm_simplex.cpp -text
+GEMS3K/jama_cholesky.h -text
+GEMS3K/jama_lu.h -text
+GEMS3K/m_const.h -text
+GEMS3K/m_param.h -text
+GEMS3K/main.cpp -text
+GEMS3K/ms_multi.h -text
+GEMS3K/ms_multi_file.cpp -text
+GEMS3K/ms_multi_format.cpp -text
+GEMS3K/ms_param.cpp -text
+GEMS3K/node.cpp -text
+GEMS3K/node.h -text
+GEMS3K/node_format.cpp -text
+GEMS3K/nodearray.cpp -text
+GEMS3K/nodearray.h -text
+GEMS3K/num_methods.cpp -text
+GEMS3K/num_methods.h -text
+GEMS3K/platform/CRAYXT3-catamount/Makefile -text
+GEMS3K/platform/Linux-GNU/Makefile -text
+GEMS3K/platform/Linux-GNU/Makefile.lib -text
+GEMS3K/platform/Linux-PGI/Makefile -text
+GEMS3K/platform/Linux-PGI/Makefile.lib -text
+GEMS3K/platform/Linux-PGI/Makefile.prof -text
+GEMS3K/platform/MacOSX/Makefile -text
+GEMS3K/platform/MacOSX/Makefile.lib -text
+GEMS3K/platform/other/Makefile -text
+GEMS3K/platform/win32MinGW/Makefile -text
+GEMS3K/platform/win32bcc/Makefile -text
+GEMS3K/s_fgl.cpp -text
+GEMS3K/s_fgl.h -text
+GEMS3K/s_fgl1.cpp -text
+GEMS3K/s_fgl2.cpp -text
+GEMS3K/s_fgl3.cpp -text
+GEMS3K/s_fgl4.cpp -text
+GEMS3K/tnt.h -text
+GEMS3K/tnt_array1d.h -text
+GEMS3K/tnt_array2d.h -text
+GEMS3K/tnt_i_refvec.h -text
+GEMS3K/v_user.h -text
+GEMS3K/verror.h -text
 gem2mt-sep/CalcColumn.BAT -text
 gem2mt-sep/Makefile -text
 gem2mt-sep/Makefile.MinGW -text
@@ -108,7 +184,6 @@ gem2mt-sep/test/testA.dat -text
 gem2mt-sep/test/testW-W32.bat -text
 gem2mt-sep/test/testW.dat -text
 gem2mt-sep/test/testW.out -text
-node-gem/Makefile -text
 node-gem/Makefile.MinGW -text
 node-gem/doc/Readme.1st -text
 node-gem/doc/scm-dbr-dat-doc.txt -text
@@ -117,6 +192,7 @@ node-gem/doc/scm-ipm-dat-doc.txt -text
 node-gem/linux-run.bat -text
 node-gem/main.cpp -text
 node-gem/node-gem-sep.pro -text
+node-gem/node-gem3-sep.pro -text
 node-gem/obj/Readme.txt -text
 node-gem/platform/CRAYXT3-catamount/Makefile -text
 node-gem/platform/Linux-GNU/Makefile -text
@@ -235,12 +311,12 @@ node-gem/tp_test/CalcColumn_tp.out -text
 node-gem/tp_test/linux-run.bat -text
 node-gem/tp_test/main.cpp -text
 nodearray-gem/LINUX-RUN.BAT -text
-nodearray-gem/Makefile -text
 nodearray-gem/doc/Readme.1st -text
 nodearray-gem/doc/filelist-doc.txt -text
 nodearray-gem/main.cpp -text
 nodearray-gem/main.cpp.template -text
 nodearray-gem/nodearray-gem.pro -text
+nodearray-gem/nodearray-gem3.pro -text
 nodearray-gem/obj/Readme.txt -text
 nodearray-gem/platform/Linux-GNU/Makefile -text
 nodearray-gem/platform/Linux-PGI/Makefile -text
