--- a/.gitattributes
+++ b/.gitattributes
@@ -198,3 +198,27 @@ node-gem/tp_test/CalcColumn.BAT -text
 node-gem/tp_test/CalcColumn_tp.out -text
 node-gem/tp_test/linux-run.bat -text
 node-gem/tp_test/main.cpp -text
+nodearray-gem/LINUX-RUN.BAT -text
+nodearray-gem/doc/Readme.1st -text
+nodearray-gem/doc/filelist-doc.txt -text
+nodearray-gem/main.cpp -text
+nodearray-gem/main.cpp.template -text
+nodearray-gem/nodearray-gem.pro -text
+nodearray-gem/nodearray-gem3.pro -text
+nodearray-gem/obj/Readme.txt -text
+nodearray-gem/platform/Linux-GNU/Makefile -text
+nodearray-gem/platform/Linux-PGI/Makefile -text
+nodearray-gem/platform/other/Makefile -text
+nodearray-gem/platform/win32bcc/Makefile -text
+nodearray-gem/platform/win32minGW/Makefile -text
+nodearray-gem/platform/win32minGW/object_ld_script -text
+nodearray-gem/platform/win32msvc/Makefile -text
+nodearray-gem/test/Readme.1st -text
+nodearray-gem/test/Speed15ic-dat.lst -text
+nodearray-gem/test/Speed15ic-dbr-0-0000.dat -text
+nodearray-gem/test/Speed15ic-dbr-0-0001.dat -text
+nodearray-gem/test/Speed15ic-dch.dat -text
+nodearray-gem/test/Speed15ic-ipm.dat -text
+nodearray-gem/test/linux-run.bat -text
+nodearray-gem/test/win32-run.bat -text
+nodearray-gem/win32-run.bat -text
