Moved trunk/GEMS3K/doc to trunk/Docs/GEMS3K.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@665 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,23 +1,23 @@
 * text=auto !eol
+Docs/GEMS3K/html/FlowChartOfIPM-3-Algorithm.png -text
+Docs/GEMS3K/html/gems1.png -text
+Docs/GEMS3K/html/gems3k-manual.html -text
+Docs/GEMS3K/txt/NewGEMS_RepoStructure.txt -text
+Docs/GEMS3K/txt/PGIcompile.txt -text
+Docs/GEMS3K/txt/ParamMulti-dat.txt -text
+Docs/GEMS3K/txt/SVN-URL-ROCKFLOW-GEM.txt -text
+Docs/GEMS3K/txt/ToDo-list.txt -text
+Docs/GEMS3K/txt/dbr-dat-doc.txt -text
+Docs/GEMS3K/txt/dch-dat-doc.txt -text
+Docs/GEMS3K/txt/f_gem_node.h -text
+Docs/GEMS3K/txt/f_gem_node.inc -text
+Docs/GEMS3K/txt/filelist-doc.txt -text
+Docs/GEMS3K/txt/ipm-dat-doc.txt -text
 GEMS3K/GEMS3K.pro -text
 GEMS3K/Makefile.MinGW -text
 GEMS3K/Makefile.lib -text
 GEMS3K/databr.h -text
 GEMS3K/datach.h -text
-GEMS3K/doc/html/FlowChartOfIPM-3-Algorithm.png -text
-GEMS3K/doc/html/gems1.png -text
-GEMS3K/doc/html/gems3k-manual.html -text
-GEMS3K/doc/txt/NewGEMS_RepoStructure.txt -text
-GEMS3K/doc/txt/PGIcompile.txt -text
-GEMS3K/doc/txt/ParamMulti-dat.txt -text
-GEMS3K/doc/txt/SVN-URL-ROCKFLOW-GEM.txt -text
-GEMS3K/doc/txt/ToDo-list.txt -text
-GEMS3K/doc/txt/dbr-dat-doc.txt -text
-GEMS3K/doc/txt/dch-dat-doc.txt -text
-GEMS3K/doc/txt/f_gem_node.h -text
-GEMS3K/doc/txt/f_gem_node.inc -text
-GEMS3K/doc/txt/filelist-doc.txt -text
-GEMS3K/doc/txt/ipm-dat-doc.txt -text
 GEMS3K/gdatastream.cpp -text
 GEMS3K/gdatastream.h -text
 GEMS3K/gems3k.pri -text
