Moved trunk/Docs/GEMS3K to trunk/Docs.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@666 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,18 @@
 * text=auto !eol
-Docs/GEMS3K/html/FlowChartOfIPM-3-Algorithm.png -text
-Docs/GEMS3K/html/gems1.png -text
-Docs/GEMS3K/html/gems3k-manual.html -text
-Docs/GEMS3K/txt/NewGEMS_RepoStructure.txt -text
-Docs/GEMS3K/txt/PGIcompile.txt -text
-Docs/GEMS3K/txt/ParamMulti-dat.txt -text
-Docs/GEMS3K/txt/SVN-URL-ROCKFLOW-GEM.txt -text
-Docs/GEMS3K/txt/ToDo-list.txt -text
-Docs/GEMS3K/txt/dbr-dat-doc.txt -text
-Docs/GEMS3K/txt/dch-dat-doc.txt -text
-Docs/GEMS3K/txt/f_gem_node.h -text
-Docs/GEMS3K/txt/f_gem_node.inc -text
-Docs/GEMS3K/txt/filelist-doc.txt -text
-Docs/GEMS3K/txt/ipm-dat-doc.txt -text
+Docs/html/FlowChartOfIPM-3-Algorithm.png -text
+Docs/html/gems1.png -text
+Docs/html/gems3k-manual.html -text
+Docs/txt/NewGEMS_RepoStructure.txt -text
+Docs/txt/PGIcompile.txt -text
+Docs/txt/ParamMulti-dat.txt -text
+Docs/txt/SVN-URL-ROCKFLOW-GEM.txt -text
+Docs/txt/ToDo-list.txt -text
+Docs/txt/dbr-dat-doc.txt -text
+Docs/txt/dch-dat-doc.txt -text
+Docs/txt/f_gem_node.h -text
+Docs/txt/f_gem_node.inc -text
+Docs/txt/filelist-doc.txt -text
+Docs/txt/ipm-dat-doc.txt -text
 GEMS3K/GEMS3K.pro -text
 GEMS3K/Makefile.MinGW -text
 GEMS3K/Makefile.lib -text
