Test of changed svn keyword substitution.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@674 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -31,7 +31,7 @@ GEMS3K/ipm_simplex.cpp -text
 GEMS3K/jama_cholesky.h -text
 GEMS3K/jama_lu.h -text
 GEMS3K/m_const.h -text
-GEMS3K/m_param.h -text
+GEMS3K/m_param.h -text svn_keywords=Id
 GEMS3K/main.cpp -text
 GEMS3K/ms_multi.h -text
 GEMS3K/ms_multi_file.cpp -text
