Bugfixes in node-gem example to conform to the present GEMS3K version; added node-gem-build subfolder with node-gem test example
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@699 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -487,6 +487,14 @@ GEMS3K/tnt_array2d.h -text
 GEMS3K/tnt_i_refvec.h -text
 GEMS3K/v_user.h -text svn_keywords=Id
 GEMS3K/verror.h -text svn_keywords=Id
+node-gem-build/CalcColumn.BAT -text
+node-gem-build/Makefile -text
+node-gem-build/linux-run.bat -text
+node-gem-build/tp_test/CalcColumn-dat.lst -text
+node-gem-build/tp_test/CalcColumn-dbr-0-0000.dat -text
+node-gem-build/tp_test/CalcColumn-dbr-0-0001.dat -text
+node-gem-build/tp_test/CalcColumn-dch.dat -text
+node-gem-build/tp_test/CalcColumn-ipm.dat -text
 node-gem/Makefile.MinGW -text
 node-gem/doc/Readme.1st -text
 node-gem/doc/scm-dbr-dat-doc.txt -text
