Interim commit of re-worked gems3k html documentation files.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@718 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -416,6 +416,12 @@ Docs/doxy/html/tabs.css -text
 Docs/doxy/html/v__user_8h_source.html -text
 Docs/doxy/html/verror_8h_source.html -text
 Docs/html/FlowChartOfIPM-3-Algorithm.png -text
+Docs/html/Pitzer_Phase_page3.png -text
+Docs/html/Pitzer_phase_code.png -text
+Docs/html/SIT-Phase-page3.png -text
+Docs/html/SetupWritingGEMS3KfilesDialog.png -text
+Docs/html/SetupWritingGEMS3KfilesPage2grid.png -text
+Docs/html/SetupWritingGEMS3KfilesPage2pairs.png -text
 Docs/html/gems1.png -text
 Docs/html/gems3k-manual.html -text
 Docs/txt/NewGEMS_RepoStructure.txt -text
