Added index and background image files to html doc folder.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@723 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -422,6 +422,7 @@ Docs/html/SIT-Phase-page3.png -text
 Docs/html/SetupWritingGEMS3KfilesDialog.png -text
 Docs/html/SetupWritingGEMS3KfilesPage2grid.png -text
 Docs/html/SetupWritingGEMS3KfilesPage2pairs.png -text
+Docs/html/bgimg-gray.jpg -text
 Docs/html/gems1.png -text
 Docs/html/gems3k-manual.html -text
 Docs/txt/NewGEMS_RepoStructure.txt -text
