--- a/.gitattributes
+++ b/.gitattributes
@@ -491,6 +491,7 @@ GEMS3K/tnt_array2d.h -text
 GEMS3K/tnt_i_refvec.h -text
 GEMS3K/v_user.h -text svn_keywords=Id
 GEMS3K/verror.h -text svn_keywords=Id
+dm-node-gem-build/2Walther2001_tp.out -text
 dm-node-gem-build/Makefile -text
 dm-node-gem-build/Walther2001_tp.out -text
 dm-node-gem-build/ipmlog.txt -text
