--- a/.gitattributes
+++ b/.gitattributes
@@ -416,6 +416,8 @@ Docs/html/FlowChartOfIPM-3-Algorithm.png -text
 Docs/html/Pitzer_Phase_page3.png -text
 Docs/html/Pitzer_phase_code.png -text
 Docs/html/SIT-Phase-page3.png -text
+Docs/html/Screen-Calcite-Col-BC-0000.png -text
+Docs/html/Screen-Calcite-Column-0001.png -text
 Docs/html/SetupWritingGEMS3KfilesDialog.png -text
 Docs/html/SetupWritingGEMS3KfilesPage2grid.png -text
 Docs/html/SetupWritingGEMS3KfilesPage2pairs.png -text
