Completed GEMS3K documentation html files (gems3k-tsolmod.html needs additions by TW and FFH). Added a screenshot with default GEMS3K numerical settings.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@747 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -412,6 +412,7 @@ Docs/doxy/html/tab_s.png -text
 Docs/doxy/html/tabs.css -text
 Docs/doxy/html/v__user_8h_source.html -text
 Docs/doxy/html/verror_8h_source.html -text
+Docs/html/Default-GEMIPM3-Num-Controls.png -text
 Docs/html/FlowChartOfIPM-3-Algorithm.png -text
 Docs/html/Pitzer_Phase_page3.png -text
 Docs/html/Pitzer_phase_code.png -text
