--- a/.gitattributes
+++ b/.gitattributes
@@ -814,6 +814,7 @@ node-gem-build/debug/mingwm10.dll -text
 node-gem-build/linux-run.bat -text
 node-gem-build/release/libgcc_s_dw2-1.dll -text
 node-gem-build/release/mingwm10.dll -text
+node-gem-build/results/results.ods -text
 node-gem-build/tp_test/CalcColumn-dat.lst -text
 node-gem-build/tp_test/CalcColumn-dbr-0-0000.dat -text
 node-gem-build/tp_test/CalcColumn-dbr-0-0001.dat -text
