Further corrections to TKinMet class.
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/branches/devPhase@1012 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -812,6 +812,7 @@ gemcalc-build/release/mingwm10.dll -text
 node-gem-build/debug/libgcc_s_dw2-1.dll -text
 node-gem-build/debug/mingwm10.dll -text
 node-gem-build/linux-run.bat -text
+node-gem-build/node-gem -text
 node-gem-build/release/libgcc_s_dw2-1.dll -text
 node-gem-build/release/mingwm10.dll -text
 node-gem-build/results/results.ods -text
