fixes to compile using latest clang and MinGW C++ compilers

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 GEMS3K/ms_multi_new.h
 GEMS3K/s_fgl_new.h
-gemcalc-build/Makefile.Debug
-gemcalc-build/Makefile.Release
+gemcalc-build/Makefile.*
+gemcalc-build/Makefile
 gemcalc-build/obj
 gemcalc-build/object_script.gemcalc.Debug
 gemcalc-build/object_script.gemcalc.Release
 gemcalc-build/tp_test/CalcColumn-dbr-0-0001.dat.out
+gemcalc-build/gemcalc.app
+gemcalc-build/.qmake.*
 gemcalc/gemcalc.pro.user
 gemcalc/gemcalc.pro.user.2.5pre1
 lib-gems3k/Makefile
@@ -19,10 +21,12 @@ lib-gems3k/object_script.gems3k.Debug
 lib-gems3k/object_script.gems3k.Release
 lib-gems3k/object_script.libgems3k.Debug
 lib-gems3k/object_script.libgems3k.Release
-node-gem-build/Makefile.Debug
-node-gem-build/Makefile.Release
+node-gem-build/Makefile.*
+node-gem-build/Makefile
 node-gem-build/node-gem_resource.rc
 node-gem-build/obj/*.o
 node-gem-build/object_script.node-gem.Debug
 node-gem-build/object_script.node-gem.Release
+node-gem-build/node-gem.app
+node-gem-build/.qmake.*
 node-gem/node-gem.pro.user
