--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ nodearray-gem-build/nodearray-gem.app
 nodearray-gem-build/.qmake.*
 nodearray-gem/nodearray-gem.pro.user
 nodearray-gem/nodearray-gem3.pro.user
+lib-gems3k/.qmake.stash
+lib-gems3k/release/libgems3k3.a
